--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,186 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+:focus,
+:active {
+  outline: none;
+}
+a:focus,
+a:active {
+  outline: none;
+}
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+input::-ms-clear {
+  display: none;
+}
+button {
+  cursor: pointer;
+}
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+a,
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+ul li {
+  list-style: none;
+}
+img {
+  vertical-align: top;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+/*--------------------*/
+
+html,
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  min-height: 300px;
+  max-width: 500px;
+
+  margin: 30px auto;
+  padding: 30px;
+
+  overflow: auto;
+
+  border: 1px solid steelblue;
+  border-radius: 5px;
+}
+.btn {
+  display: inline-block;
+
+  margin: 5px;
+  padding: 10px 30px;
+
+  background: #000;
+  color: #fff;
+
+  border: none;
+  border-radius: 8px;
+
+  cursor: pointer;
+
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+
+  transition: all 0.2s ease 0s;
+
+  &:hover {
+    transform: scale(1.03);
+  }
+
+  &:active {
+    transform: scale(0.98);
+  }
+}
+
+.btn-block {
+  display: block;
+  max-width: 428px;
+  width: 100%;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+  margin: 0 0 0 5px;
+
+  font-size: 16px;
+}
+
+.form-control {
+  input {
+    max-width: 428px;
+    height: 40px;
+    width: 100%;
+
+    margin: 10px 5px 5px 5px;
+    padding: 0 10px;
+
+    border: 1px solid steelblue;
+    border-radius: 4px;
+
+    transition: all 0.2s ease 0s;
+
+    &::placeholder {
+      transition: all 0.2s ease 0s;
+    }
+
+    &:hover {
+      border-color: #1783db;
+    }
+    &:focus {
+      border: 1px solid #1783db;
+      &::placeholder {
+        transform: translateX(7px);
+        opacity: 0;
+      }
+    }
+  }
+}
+.form-control-check {
+  display: flex;
+  align-items: center;
+}
+
+.form-control-check label {
+  max-width: 100px;
+}
+
+.form-control-check input {
+  height: 18px;
+  max-width: 18px;
+
+  margin: 0 0 0 10px;
+}
